# telemetry-app-demo

./: README.md  docker-compose.yml
app-sim/: Cargo.toml  Dockerfile
app-sim/src/: main.rs
otel/: otel-collector.yaml
telegraf/: Dockerfile  fake_fan.py  telegraf.conf
