[package]
name = "app-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
opentelemetry = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["metrics", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["metrics"] }
rand = "0.9.2"


